--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="5px">
+            android:layout_margin="5dp">
 
             <TextView
                 android:id="@+id/tvMainTitle"
@@ -83,7 +83,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/et_main_password" />
 
             <Button
-                android:id="@+id/btn_signin"
+                android:id="@+id/btn_sign_in"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="29dp"
@@ -105,7 +105,7 @@
                 android:orientation="horizontal"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/btn_signin">
+                app:layout_constraintTop_toBottomOf="@+id/btn_sign_in">
 
                 <TextView
                     android:id="@+id/textView2"
