Email Validator. Refactor

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,8 +43,7 @@
                 android:layout_marginEnd="42dp"
                 android:hint="User Name"
                 android:textAlignment="center"
-                android:textColor="#6bfff7"
-                android:textColorHint="#52afaa"
+                android:textColor="@color/black"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvMainTitle" />
@@ -59,8 +58,7 @@
                 android:hint="Password"
                 android:inputType="textPassword"
                 android:textAlignment="center"
-                android:textColor="#6bfff7"
-                android:textColorHint="#52afaa"
+                android:textColor="@color/black"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/et_user_name" />
@@ -75,8 +73,7 @@
                 android:hint="Email"
                 android:inputType="textEmailAddress"
                 android:textAlignment="center"
-                android:textColor="#6bfff7"
-                android:textColorHint="#52afaa"
+                android:textColor="@color/black"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
