--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -42,8 +42,7 @@
                 android:layout_marginEnd="42dp"
                 android:hint="First name"
                 android:textAlignment="center"
-                android:textColor="#6bfff7"
-                android:textColorHint="#52afaa"
+                android:textColor="@color/black"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
@@ -57,8 +56,7 @@
                 android:layout_marginStart="44dp"
                 android:layout_marginTop="35dp"
                 android:layout_marginEnd="42dp"
-                android:textColor="#6bfff7"
-                android:textColorHint="#52afaa"
+                android:textColor="@color/black"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/et_first_name"
