--- a/app/src/main/res/layout/activity_shop.xml
+++ b/app/src/main/res/layout/activity_shop.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -20,9 +19,78 @@
 
     <include
         android:id="@+id/layout_toolbar"
-        layout="@layout/tb_layout"
-        />
+        layout="@layout/tb_layout" />
 
+    <androidx.appcompat.widget.SearchView
+        android:id="@+id/searchView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/layout_toolbar" />
+
+    <ScrollView
+        android:id="@+id/sv_cat"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/searchView">
+
+    <include
+            layout="@layout/shop_sv_category"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+    </include>
+
+    </ScrollView>
+
+    <LinearLayout
+        android:id="@+id/ll_latest"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/sv_cat"
+        android:orientation="horizontal">
+        <include
+            layout="@layout/ll_latest_viewall"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+        </include>
+    </LinearLayout>
+
+    <HorizontalScrollView
+        android:id="@+id/hsv_latest"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fillViewport="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ll_latest">
+
+        <include
+            layout="@layout/shop_hsv_latest"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+        </include>
+    </HorizontalScrollView>
+
+    <LinearLayout
+        android:id="@+id/ll_flash_sale"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/hsv_latest"
+        android:orientation="horizontal">
+        <include
+            layout="@layout/ll_flash_sale_view_all"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+        </include>
+    </LinearLayout>
 
     <fragment
         android:id="@+id/nav_host_fragment_activity_shop"
@@ -34,5 +102,6 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:navGraph="@navigation/mobile_navigation" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
