--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -111,6 +111,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/ll_brands"
+                android:layout_marginBottom="40dp"
                 android:orientation="horizontal"></androidx.recyclerview.widget.RecyclerView>
         </RelativeLayout>
     </ScrollView>
